# tui-fm

./: .coverage  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  PROJECT_STATUS.md  QUICKSTART.md  README.md  REPO_OVERVIEW.md  TODO.md  app.py  archive_service.py  bookmarks_manager.py  config_manager.py  config_ui.py  debug_layout.py  disk_usage_service.py  filesystem_service.py  filterable_tree.py  fuzzy_search_service.py  git_enhanced.py  git_ui_components.py  icon_manager.py  image_preview_service.py  main.py  mouse_handler.py  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  tab_manager.py  tabbed_directory_tree.py  test_app.py  test_file_operations_and_filter.py  test_filterable_tree_and_delete_safety.py  test_help_toggle.py  test_layout_and_syntax_preview.py  test_operation_feedback.py  theme_data.py  theme_manager.py
.github/workflows/: ci.yml
tests/: conftest.py  test_app_startup_navigation.py  test_archive_service.py  test_bookmarks_manager.py  test_config_manager.py  test_disk_usage_service.py  test_filesystem_service.py  test_filterable_tree.py  test_fuzzy_search_service.py  test_git_enhanced.py  test_icon_integration.py  test_icon_manager.py  test_image_integration_simple.py  test_image_preview_service.py  test_mouse_handler.py  test_path_navigation.py  test_startup_bindings.py  test_tab_manager.py  test_theme_data.py  test_theme_manager.py
